WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243275
[PlayStation] Fix build after
252739@main
https://bugs.webkit.org/show_bug.cgi?id=243275
Summary
[PlayStation] Fix build after 252739@main
Basuke Suzuki
Reported
2022-07-27 18:42:09 PDT
FAILED: Source/WTF/wtf/CMakeFiles/WTF.dir/posix/OSAllocatorPOSIX.cpp.o Source/WTF/wtf/posix/OSAllocatorPOSIX.cpp:201:24: error: use of undeclared identifier 'address' while (madvise(address, bytes, MADV_DONTNEED) == -1 && errno == EAGAIN) { } ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-07-28 10:02:45 PDT
Committed
252917@main
(2f1d37b20d5b): <
https://commits.webkit.org/252917@main
> Reviewed commits have been landed. Closing PR #2816 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-07-28 10:03:19 PDT
<
rdar://problem/97729054
>
Basuke Suzuki
Comment 3
2022-07-28 10:36:52 PDT
https://github.com/WebKit/WebKit/pull/2816
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug