[PlayStation] Fix build after 252739@main https://bugs.webkit.org/show_bug.cgi?id=243275

Unreviewed build fix.

* Source/WTF/wtf/posix/OSAllocatorPOSIX.cpp:
(WTF::OSAllocator::tryReserveUncommittedAligned):

Canonical link: https://commits.webkit.org/252917@main